--- a/IC_Assignment1.ipynb
+++ b/IC_Assignment1.ipynb
@@ -27,11 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4928280c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Call N_iterative with N_0 = 0, p=2, and number_iterations = 10\n",
+    "result = N_iterative(0, 2, 10)\n",
+    "# and print the result\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
@@ -44,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IC_assignment_1",
+   "display_name": "IC_Assignments",
    "language": "python",
    "name": "python3"
   },
