Update Random code

--- a/RandomizeClassList.ipynb
+++ b/RandomizeClassList.ipynb
@@ -6,7 +6,17 @@
    "id": "08ff3f83",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "names_350001 = [\"Brad\",\"Madi\",\"Enya\",\"Cassidy\",\"Alexander\",\"Cade\",\"Joe\",\"Josue\",\"Clare\",\"Seth\",\"David\",\"Erin\",\"Emma\"]\n",
+    "\n",
+    "\n",
+    "randomness_seed = int(input(\"Enter a number to increase randomness (0-100): \"))\n",
+    "\n",
+    "random.seed(randomness_seed)\n",
+    "random.shuffle(names_350001)"
+   ]
   }
  ],
  "metadata": {
